--- a/init.org
+++ b/init.org
@@ -100,6 +100,7 @@ repositories. We first list these packages:
                      ess-smart-equals   ; Flexible, context-sensitive assignment for R
                      ess-view-data      ; Tidyverse-like view and manipulate data in R
                      expand-region      ; Increase selected region by semantic units
+                     format-all         ; Auto-format source code
                      flycheck           ; On-the-fly syntax checking
                      flx                ; Fuzzy matching
                      forge              ; Access Git forges (GitHub/GitLab) from Magit
@@ -112,6 +113,7 @@ repositories. We first list these packages:
                      ivy-rich           ; More friendly interface for Ivy
                      magit              ; Text-based user interface to Git
                      magit-gitflow      ; GitFlow plugin for Magit
+                     markdownfmt        ; Format markdown using markdownfmt
                      markdown-mode      ; Edit Markdown-formatted text
                      markdown-toc       ; Generate a TOC in Markdown file 
                      move-text          ; Move current line or region up or down 
@@ -1503,7 +1505,7 @@ the list of potential extensions used there (PDF, DJVU, ZIP, etc.):
  ;; bibtex-completion-bibliography '("/home/mathieu/Work/Bibliography/BiblioMB.bib")
  bibtex-completion-bibliography '("/home/mathieu/.biblio.bib")
  ;; bibtex-completion-library-path '("/home/mathieu/Work/Bibliography/PDF/")
- bibtex-completion-library-path '("/home/mathieu/Public/Basille/Bibliographie/PDF")
+ bibtex-completion-library-path '("/home/mathieu/Public/Bibliographie/PDF")
  bibtex-completion-find-additional-pdfs t
  bibtex-completion-pdf-extension '(".pdf" ".djvu" ".ps" ".epub" ".mobi" ".zip")
  )
@@ -1633,9 +1635,20 @@ tweaks:
   "/usr/local/bin/pandoc"
   " --from=markdown --to=html"
   " --standalone --mathjax --highlight-style=pygments")
- markdown-asymmetric-header t           ; Asymetric headers (only # on the left)
- markdown-enable-math t                 ; Enable mathematical expressions (LaTeX)
- )
+ ;; markdown-header-scaling t           ; Headings of sizes relative to their level
+ markdown-asymmetric-header t        ; Asymetric headers (only # on the left)
+ markdown-enable-math t              ; Enable mathematical expressions (LaTeX)
+ markdown-list-indent-width 2        ; Depth of indentation for lists
+markdown-unordered-list-item-prefix "- " ; Prefix for list items
+)
+(custom-set-faces                       ; Polices plus grosses pour les titres
+ '(markdown-header-face-1 ((t (:inherit markdown-header-face :height 2.0 :weight extra-bold))))
+ '(markdown-header-face-2 ((t (:inherit markdown-header-face :height 1.7 :weight extra-bold))))
+ '(markdown-header-face-3 ((t (:inherit markdown-header-face :height 1.5 :weight bold))))
+ '(markdown-header-face-4 ((t (:inherit markdown-header-face :height 1.3 :weight bold))))
+ '(markdown-header-face-5 ((t (:inherit markdown-header-face :height 1.1 :weight bold))))
+ '(markdown-header-face-6 ((t (:inherit markdown-header-face :weight bold))))
+)
 #+END_SRC
 
 Additional home-made functions to deal with to-do items in Markdown (~C-c C-t~
@@ -1649,6 +1662,7 @@ Grep top buffer):
             (load-library "md-todo-library")
             (local-set-key (kbd "C-c C-t") 'md-todo)
             (local-set-key (kbd "C-c C-d") 'md-todo-done)
+            (local-set-key (kbd "C-c C-r") 'md-todo-cancel)
             (local-set-key [C-S-f5] 'md-todo-list)
             ))
 #+END_SRC
@@ -2243,12 +2257,12 @@ same type:
 
 * Start-up buffer
 
-Opens the =Start Here.md= file if no file is selected, with NeoTree on the left
-(a little bit buggy):
+Opens the =Bonjour.md= file if no file is selected, with NeoTree on the left (a
+little bit buggy):
 
 #+BEGIN_SRC emacs-lisp
   (defun start-here ()
-    (find-file "/home/mathieu/Public/Notes/Start Here.md")
+    (find-file "/home/mathieu/Public/Notes/Bonjour.md")
     (neotree-toggle)
     ;; (other-window)
     )
