--- a/init.org
+++ b/init.org
@@ -229,15 +229,18 @@ There is currently [[https://github.com/guidoschmidt/circadian.el/issues/9][a bu
 #+END_SRC
 
 With [[https://github.com/LionyxML/auto-dark-emacs][auto-dark]], Emacs can switch to dark mode when the system itself switches to
-dark mode (consequently, dark mode needs to be enabled in the system; works for
-GNOME). I will use [[https://github.com/tmalsburg/tango-plus-theme][Tango Plus]] during the day, and [[https://github.com/arcticicestudio/nord-emacs][Nord Emacs]] at night (with
-brightness of comments at 20%).
+dark mode (consequently, dark mode needs to be enabled in the system). I will
+use [[https://github.com/tmalsburg/tango-plus-theme][Tango Plus]] during the day, and [[https://github.com/arcticicestudio/nord-emacs][Nord Emacs]] at night (with brightness of
+comments at 20%). **Note:** There is currently [[https://github.com/LionyxML/auto-dark-emacs/issues/90][a bug]] with GNOME.
 
 #+BEGIN_SRC emacs-lisp
-(setq nord-comment-brightness 20)
-(setq auto-dark-light-theme 'tango-plus)
-(setq auto-dark-dark-theme 'nord)
-(auto-dark-mode t)
+(setq custom-safe-themes t)
+(load-theme 'tango-plus t)
+
+;; (setq nord-comment-brightness 20)
+;; (setq custom-safe-themes t)
+;; (setq auto-dark-themes '((tango-plus) (nord)))
+;; (auto-dark-mode)
 #+END_SRC
 
 
